# Gauntlet

./: .gitignore  README.md  environment.yml  hello_world.md  program.md  requirements.txt  start.py
GauntletLayoutExe/: GauntletLayoutExe.csproj  LayoutForm.cs  Program.cs  app.manifest
applesauce/: .gitignore  README.md  data_card.json  explains.md  exploration.ipynb  pyproject.toml  scratchpad.txt
applesauce/agents/: chart_orchestrator.json  data_analyst.json  table_creator.json  theme.json
applesauce/applesauce/: __init__.py  agents.py  cli.py  config.py  data.py  eval.py  history.py  llm.py  models.py  notebook.py  pipeline.py  policy.py  themes.py  trace.py
applesauce/applesauce/run_it_yaself/: __init__.py  cli.py  client.py  config.py  heuristics.py  models.py  pipeline.py  prompts.py
applesauce/tests/: test_agents.py  test_cli.py  test_data.py  test_eval.py  test_notebook.py  test_run_it_yaself.py  test_trace.py
applesauce/tests/fixtures/: mixed.csv
gauntlet-sandbox/: README.md  analysis.py  data_loader.py  data_preprocessing.py  eval.py  gauntlet.yaml  requirements.txt  train.py  visualization.py
input/: prompt.md  raw_input.txt  run_config.yaml
input_data/: data_test_list.md
project plans & sketches/: coding-task-plan.md
scripts/: run_gauntlet_sandbox.py
tests/: conftest.py  test_artifact_collector.py  test_code_generator.py  test_config.py  test_file_policy.py  test_input_loader.py  test_llama_cpp_client.py  test_pipeline_helpers.py  test_pipeline_integration.py  test_router.py  test_run_gauntlet_sandbox.py  test_start.py
(+580 files in other folders)
