[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applesauce"
version = "0.1.0"
description = "An OpenAI-backed agent harness for data science exploration notebooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.85.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
excel = [
  "openpyxl>=3.1.0",
]
parquet = [
  "pyarrow>=16.0.0",
]

[project.scripts]
applesauce = "applesauce.cli:main"

[tool.setuptools.packages.find]
include = ["applesauce*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
